public class Documentos {
    public String analizarDocumentos() {
        return "Opción 1: más cobertura... Opción 2: más barata...";
    }
}
